refactor: Update CommentServiceTest for improved clarity and functionality